new proj/src/objects/GE_ES_TRS_Compliance__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_TRS_Compliance__c</fullName>
        <label>TRS Compliant?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>TRS Compliance</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>TRS Compliance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRS Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>